--- a/BlockBreaker/BlockBreaker/BlockBreaker.csproj
+++ b/BlockBreaker/BlockBreaker/BlockBreaker.csproj
@@ -72,18 +72,39 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\AudioTypes.cs" />
     <Compile Include="Entity\Ball.cs" />
     <Compile Include="Entity\Block.cs" />
+    <Compile Include="Entity\Components\AmmoComponent.cs" />
     <Compile Include="Entity\Components\HealthComponent.cs" />
+    <Compile Include="Entity\Components\PowerUpComponent.cs" />
+    <Compile Include="Entity\Laser.cs" />
+    <Compile Include="Audio\AudioMessage.cs" />
+    <Compile Include="Entity\Messages\PowerUpMessage.cs" />
+    <Compile Include="Entity\Messages\ScoreMessage.cs" />
+    <Compile Include="Entity\Messages\SpawnLaserMessage.cs" />
+    <Compile Include="Entity\PowerUps.cs" />
     <Compile Include="Entity\Messages\DeadEntityMessage.cs" />
     <Compile Include="Entity\Messages\RemoveHealthMessage.cs" />
+    <Compile Include="Entity\Messages\SpawnPowerUpMessage.cs" />
     <Compile Include="Entity\Paddle.cs" />
     <Compile Include="Entity\PowerUp.cs" />
+    <Compile Include="Audio\AudioSystem.cs" />
     <Compile Include="Entity\Systems\BlockHealthSystem.cs" />
     <Compile Include="Entity\Systems\HealthSystem.cs" />
+    <Compile Include="Entity\Systems\LifeCheckerSystem.cs" />
+    <Compile Include="Entity\Systems\PowerUpSystem.cs" />
+    <Compile Include="Entity\Systems\ScoreSystem.cs" />
+    <Compile Include="Entity\Systems\SpawnLaserSystem.cs" />
+    <Compile Include="Entity\Systems\SpawnPowerUpSystem.cs" />
     <Compile Include="Entity\Wall.cs" />
+    <Compile Include="GameStates\GameStateHighscores.cs" />
+    <Compile Include="GameStates\GameStateInGame.cs" />
+    <Compile Include="GameStates\GameStateMainMenu.cs" />
+    <Compile Include="HighscoreManager.cs" />
     <Compile Include="Input\KeyboardInputSystem.cs" />
-    <Compile Include="Physics\BallMovementSystem.cs" />
+    <Compile Include="Level\LevelBuilder.cs" />
+    <Compile Include="Physics\BasicMovementSystem.cs" />
     <Compile Include="Physics\CollisionResponseSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
